# PillScanServer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: data-sources.md  evaluation.md  performance.md
src/pillscan_server/: __init__.py  app.py  auth.py  bootstrap.py  catalog.py  catalog_sync.py  cli.py  config.py  errors.py  eval.py  imaging.py  logging_config.py  main.py  middleware.py  models.py  openai_provider.py  protocols.py  service.py  setup.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_bootstrap.py  test_catalog.py  test_config.py  test_eval.py  test_models.py  test_openai_provider.py  test_rate_limit.py  test_setup.py
